# pipelines

./: Dockerfile  docker-compose.yml  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  docker-image1.yml
dag_pref/: dagster.py  prefect.py
db/: Dockerfile
pipelines/: DB.py  tasks.py
pipelines/original/: norm.csv
