[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Zhidkov Viktor <zhidkovvp@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
psycopg2 = "2.9.5"
uvicorn = "0.20.0"
python-dotenv = "0.21.0"

[tool.poetry.scripts]
pipelines = 'pipelines.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"